# cpp_drillz

computations/drill1/: CMakeLists.txt  while_loop1.cpp
computations/drill2/: CMakeLists.txt  drill2.cpp
computations/exercises/: .gitignore  CMakeLists.txt  book.cpp  book.h  date.cpp  date.h  enums.cpp  enums_drill.cpp  ex01.cpp  ex02.cpp  ex03.cpp  ex04.cpp  ex05.cpp  ex06.cpp  ex07.cpp  ex08.cpp  ex09.cpp  library.cpp  library.h  patron.cpp  patron.h
computations/ioexercises/: CMakeLists.txt  hello.txt  io1.cpp  out.tx
memory/: CMakeLists.txt  lib.cpp  lib.h  mem.cpp
